// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductScreen renders error message when an error occurs 1`] = `
<View
  style={
    {
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <Text
    style={
      {
        "alignSelf": "center",
      }
    }
  >
    Ocorreu um erro ao carregar os produtos
  </Text>
</View>
`;

exports[`ProductScreen renders loading data message 1`] = `
<View
  style={
    {
      "flex": 1,
      "justifyContent": "center",
    }
  }
>
  <Text
    style={
      {
        "alignSelf": "center",
      }
    }
  >
    Carregando...
  </Text>
</View>
`;
